@@ -33,6 +33,7 @@
 
 #include "gtkmessagearea.h"
 
+#include <glib/gi18n.h>
 #include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
 
